# WiredEye

./: LICENSE  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
buildSrc/src/main/java/: ProjectConfig.kt
core/: build.gradle.kts
core/ai/: build.gradle.kts
core/common/: build.gradle.kts
core/common/src/main/java/com/: ReleaseTree.kt
core/data/: build.gradle.kts
core/data/schemas/com.muratcangzm.data.db.WiredEyeDatabase/: 1.json
core/database/: build.gradle.kts
core/nativelib/: build.gradle.kts
core/nativelib/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-tun.cpp
core/nativelib/src/main/cpp/leak/: leak_analyzer.cpp  leak_analyzer.h  leak_analyzer_jni.cpp
core/network/: build.gradle.kts
core/network/src/main/: AndroidManifest.xml
core/preferences/: build.gradle.kts
core/resources/: build.gradle.kts
core/resources/src/main/res/drawable/: ghostly_mark.xml  ghostly_mark_monochrome.xml  ghostly_wordmark.xml  ic_ghostly_bg.xml  (+1 more)
core/shared/: build.gradle.kts
core/ui/: build.gradle.kts
feature/: build.gradle.kts
feature/details/: build.gradle.kts
feature/home/: build.gradle.kts
feature/leaks/: build.gradle.kts
feature/monitor/: build.gradle.kts
feature/settings/: build.gradle.kts
feature/summary/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+216 files in other folders)
